<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:orientation="vertical"
    android:paddingHorizontal="24dp"
    android:paddingVertical="70dp"
    tools:context=".fragments.AddCoffeeShopFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-condensed"
        android:letterSpacing="0.1"
        android:text="@string/add_coffee_title"
        android:textAllCaps="false"
        android:textColor="@color/brown"
        android:textFontWeight="700"
        android:textSize="30dp" />

    <ImageView
        android:id="@+id/img_coffee"
        android:background="@drawable/border"
        android:layout_width="400px"
        android:layout_height="400px"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:src="@drawable/item_place_holder" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/coffee_name" />

    <EditText
        android:id="@+id/txt_coffee_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/coffee_price" />

    <EditText
        android:id="@+id/txt_coffee_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <Button
        android:id="@+id/btn_add_coffee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_corner"
        android:text="@string/add_coffee_button"
        android:textColor="@color/white" />

</LinearLayout>