<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:orientation="vertical"
    android:paddingHorizontal="24dp"
    android:paddingVertical="70dp"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="400px"
        android:layout_height="400px"
        android:layout_gravity="center"
        android:layout_marginBottom="24dp"
        android:src="@drawable/kofi" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-condensed"
        android:letterSpacing="0.1"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/brown"
        android:textFontWeight="700"
        android:textSize="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/email_address" />

    <EditText
        android:id="@+id/txt_login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/password" />

    <EditText
        android:id="@+id/txt_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:minHeight="48dp"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_corner"
        android:text="@string/login"
        style="@style/Theme.Button" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="12">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="3"
            android:background="@color/brown" />

        <TextView
            android:id="@+id/txt_sign_up"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:clickable="true"
            android:onClick="onClick"
            android:text="@string/click_register"
            android:textAlignment="center"
            android:textColor="@color/brown"
            tools:ignore="TouchTargetSizeCheck" />


        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="3"
            android:background="@color/brown" />
    </LinearLayout>

    <ImageView
        android:id="@+id/google_btn"
        android:layout_width="100px"
        android:layout_height="100px"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:src="@drawable/google" />


</LinearLayout>