<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.CommentFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="12dp">
            <ImageView
                android:id="@+id/back_comment_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                app:srcCompat="@drawable/ic_baseline_arrow_back_24"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comment_detail"
                android:layout_gravity="center"
                android:textSize="18dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:orientation="vertical"
            android:layout_marginVertical="12dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/user_image_comment_detail"
                    android:layout_width="48dp"
                    android:layout_height="32dp"
                    android:src="@drawable/ic_baseline_person_outline_24" />
                <TextView
                    android:id="@+id/user_name_comment_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Name"
                    android:textStyle="normal"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    android:scrollbars="vertical"
                    android:layout_marginHorizontal="8dp"
                    android:maxHeight="180dp"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>


            <TextView
                android:id="@+id/comment_content_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Comment"
                android:textStyle="normal"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:scrollbars="vertical"
                android:maxHeight="180dp"/>
            <EditText
                android:id="@+id/edit_comment_content"
                android:layout_width="match_parent"
                android:visibility="gone"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:scrollbars="vertical"
                android:maxHeight="180dp"/>
            <Button
                android:id="@+id/edit_comment_btn"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="Edit"
                android:layout_gravity="top|end"
                android:visibility="gone"
                android:textSize="8dp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1"
                android:layout_marginVertical="8dp">
                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="@color/cream"/>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reply"
                android:textSize="18dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/reply_text"
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

                <Button
                    android:id="@+id/reply_btn"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:text="@string/add"
                    android:layout_marginHorizontal="8dp"
                    android:textSize="12dp" />

            </LinearLayout>
        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/reply_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="8dp"/>
    </LinearLayout>
</FrameLayout>